tests/invalid/errors-between-comments.cipl
@Decorator()
int main() {
    // my first lex error
    $a = 10;

    /*
    * this error is a bit more sophisticated
    * but i can handle
    * properly too
    * :)
    :P
    ****
    */
}